--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 }
 
 :root{
+  /* ==== color ตกแต่งเว็บไซต์วันเกิด ==== */
     --piggypink : #ee9ca7;
     --lightpink : #ffdde1;
     --blue      : #4e7ff1;
@@ -21,6 +22,25 @@ body {
     --lighbshadow:rgba(0, 0, 0, 0.15);
     --shadow    : rgba(0, 0, 0, 0.99);
 }
+
+.title {
+  font-family: 'Sour Gummy', sans-serif;
+  font-size: clamp(4vw,2rem,4rem);
+  color: var(--blue);
+  /* text-shadow: 0px 0px 10px var(--voilet), 0px 0px 1px var(--lightblack); */
+  margin: 1rem 0 0 0;
+  padding: 0;
+}
+
+.name {
+  font-family: 'Sour Gummy', sans-serif;
+  font-size: clamp(3.5vw, 1.5rem, 3.5rem);
+  color: var(--blue);
+  /* text-shadow: 0px 0px 10px var(--voilet), 0px 0px 1px var(--lightblack); */
+  margin: 0;
+  padding: 0;
+}
+
 
 .header {
   padding: 2rem 1rem;
@@ -60,6 +80,8 @@ body {
 }
 
 .message {
+  font-family: Itim;
+  font-size: clamp(1rem, 2vw, 2rem);
   background-color: rgba(255, 255, 255, 0.7);
   margin: 2rem;
   padding: 1rem;
