--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 
 .title {
   font-family: 'Sour Gummy', sans-serif;
-  font-size: clamp(4vw,2rem,4rem);
+  font-size: clamp(2rem,10vw,5rem);
   color: var(--blue);
   /* text-shadow: 0px 0px 10px var(--voilet), 0px 0px 1px var(--lightblack); */
   margin: 1rem 0 0 0;
@@ -34,7 +34,7 @@ body {
 
 .name {
   font-family: 'Sour Gummy', sans-serif;
-  font-size: clamp(3.5vw, 1.5rem, 3.5rem);
+  font-size: clamp(1.5rem, 5vw, 4rem);
   color: var(--blue);
   /* text-shadow: 0px 0px 10px var(--voilet), 0px 0px 1px var(--lightblack); */
   margin: 0;
@@ -51,6 +51,12 @@ body {
   position: absolute;
   animation: float 4s ease-in-out infinite;
 }
+.floating-stars img:nth-child(1) {
+  top: 10%;
+  left: 20%;
+  animation-delay: 0s;
+}
+
 
 @keyframes float {
   0%, 100% { transform: translateY(0); }
@@ -80,13 +86,20 @@ body {
 }
 
 .message {
-  font-family: Itim;
-  font-size: clamp(1rem, 2vw, 2rem);
+  position: relative;
+  display: inline-block;
+  max-width: 80%;
+  font-family: 'Itim';
+  font-size: clamp(1rem, 1vw, 2rem);
   background-color: rgba(255, 255, 255, 0.7);
-  margin: 2rem;
-  padding: 1rem;
+  margin: 1rem;
+  padding: min(1rem,8%);
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+}
+.message-list {
+  list-style: none;
+  padding: 0;
 }
 
 .otp-zone {
@@ -156,8 +169,8 @@ body {
 
 
 #secret-content {
-  margin: 2rem;
-  padding: 1rem;
+  max-width: 80%;
+  padding: min(1rem, 8%);
   background-color: #fff0f5;
   border-radius: 10px;
   display: none;
