--- a/style.css
+++ b/style.css
@@ -47,22 +47,25 @@ body {
 }
 
 .floating-stars img {
-  position: absolute;
+  width: 50px;
+  height: 50px;
+  position: flex;
   opacity: 0.8;
   animation: float 4s ease-in-out infinite;
+  z-index: 2;
 }
 
-.emoji1 {
+.smile {
   top: 30%;
-  left: 15%;
+  left: 10%;
   animation-delay: 0s;
 }
-.emoji2 {
+.cake {
   top: 60%;
   left: 65%;
   animation-delay: 1s;
 }
-.emoji3 {
+.star {
   top: 20%;
   left: 75%;
   animation-delay: 2s;
