--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 
 .title {
   font-family: "Sour Gummy", sans-serif;
-  font-size: clamp(2rem, 10vw, 5rem);
+  font-size: clamp(2rem, 5vw, 10rem);
   color: var(--blue);
   /* text-shadow: 0px 0px 10px var(--voilet), 0px 0px 1px var(--lightblack); */
   margin: 1rem 0 0 0;
@@ -42,34 +42,42 @@ body {
 }
 
 .header {
+  position: relative;
   padding: 2rem 1rem;
+  width: fit-content;
+  margin: auto;
   color: white;
 }
 
-.floating-stars img {
-  width: 50px;
-  height: 50px;
-  position: flex;
+.floating-stars  img{
+  position: absolute;
   opacity: 0.8;
   animation: float 4s ease-in-out infinite;
   z-index: 2;
 }
 
 .smile {
-  top: 30%;
-  left: 10%;
+  width: 50px;
+  height: 50px;
+  top: 10%;
+  left: 5%;
   animation-delay: 0s;
 }
 .cake {
-  top: 60%;
-  left: 65%;
-  animation-delay: 1s;
+  width: 60px;
+  height: 60px;
+  top: 40%;
+  left: 95%;
+  animation-delay: 3s;
 }
 .star {
-  top: 20%;
-  left: 75%;
-  animation-delay: 2s;
+  width: 60px;
+  height: 60px;
+  top: 100%;
+  left: 80%;
+  animation-delay: 5s;
 }
+
 @keyframes float {
   0%,
   100% {
