--- a/style.css
+++ b/style.css
@@ -25,7 +25,8 @@ body {
 
 .title {
   font-family: "Sour Gummy", sans-serif;
-  font-size: clamp(2rem, 5vw, 10rem);
+  font-size: clamp(80px, 80px, 120px);
+  /* font-size: 80px; */
   color: var(--blue);
   /* text-shadow: 0px 0px 10px var(--voilet), 0px 0px 1px var(--lightblack); */
   margin: 1rem 0 0 0;
@@ -34,7 +35,7 @@ body {
 
 .name {
   font-family: "Sour Gummy", sans-serif;
-  font-size: clamp(1.5rem, 5vw, 4rem);
+  font-size: clamp(50px, 60px, 80px);
   color: var(--blue);
   /* text-shadow: 0px 0px 10px var(--voilet), 0px 0px 1px var(--lightblack); */
   margin: 0;
@@ -51,7 +52,6 @@ body {
 
 .floating-stars  img{
   position: absolute;
-  opacity: 0.8;
   animation: float 4s ease-in-out infinite;
   z-index: 2;
 }
@@ -59,22 +59,22 @@ body {
 .smile {
   width: 50px;
   height: 50px;
-  top: 10%;
+  top: 15%;
   left: 5%;
   animation-delay: 0s;
 }
 .cake {
-  width: 60px;
-  height: 60px;
-  top: 40%;
-  left: 95%;
+  width: 50px;
+  height: 50px;
+  top: 45%;
+  left: 90%;
   animation-delay: 3s;
 }
 .star {
   width: 60px;
   height: 60px;
   top: 100%;
-  left: 80%;
+  left: 75%;
   animation-delay: 5s;
 }
 
